@@ -30,8 +30,11 @@ Changes log
        - Fixed SpringBeanFinder throwing misleading exceptions 
          when resource not found. Contributed by Rhett Sutphin.
        - Fixed double-instantiation of prototype resources in
-         SpringBeanRouter.  Reported by George Calm; contributed by
-         Rhett Sutphin.
+         SpringBeanRouter. Reported by George Calm and 
+         contributed by Rhett Sutphin.
+       - Fixed status description lost when throwing ResourceException
+         inside the deprecated Resource class.
+         Reported by Rhett Sutphin.         
        - Relaxed ConnegUtils#getPreferredMetadata algorithm.
          Reported by Rickard Öberg.
          
